--- a/index.html
+++ b/index.html
@@ -237,32 +237,30 @@
 
     /* Control panel with stats bottom left */
     #stats-panel {
-      position: fixed;
-      bottom: 15px;
-      left: 15px;
-      background: var(--panel-bg);
-      padding: 15px 20px;
-      border-radius: 25px;
-      width: 280px;
-      font-size: 0.9rem;
-      line-height: 1.3;
-      color: var(--fg);
-      box-shadow:
-        2px 2px 8px rgba(0,0,0,0.7);
-      backdrop-filter: blur(6px);
-      user-select: none;
-      z-index: 100;
-      font-weight: 700;
-      letter-spacing: 0.02em;
-    }
-    #stats-panel div {
-      margin-bottom: 6px;
-      display: flex;
-      justify-content: space-between;
-    }
-    #stats-panel div:last-child {
-      margin-bottom: 0;
-    }
+  position: absolute;  /* postavi ga na fiksno mesto na zemljevidu */
+  top: 80px;           /* prilagodi glede na ostale elemente */
+  right: 20px;
+  max-width: 280px;
+  background-color: rgba(0, 0, 0, 0.4);  /* prozorno črno ozadje */
+  color: white;
+  padding: 15px 20px;
+  border-radius: 12px;
+  font-size: 0.9rem;
+  box-shadow: 0 0 15px rgba(0, 0, 0, 0.7);
+  backdrop-filter: blur(6px);  /* zamegli ozadje pod panelom */
+  z-index: 900;   /* da je nad zemljevidom */
+  user-select: none;
+}
+
+#stats-panel > div {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 6px;
+}
+
+#stats-panel > div span:first-child {
+  font-weight: 600;
+}
 
     /* Start/Stop ride buttons container */
     #controls {
