--- a/index.html
+++ b/index.html
@@ -253,6 +253,20 @@
   z-index: 100;
   font-weight: 700;
   letter-spacing: 0.02em;
+  display: flex;
+  flex-direction: column;
+  gap: 6px;
+}
+
+#stats-panel div {
+  display: flex;
+  justify-content: space-between;
+  padding-bottom: 4px;
+  border-bottom: 1px solid rgba(255, 255, 255, 0.1);
+}
+
+#stats-panel div:last-child {
+  border-bottom: none;
 }
 
 #bottom-left-buttons {
