--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
     }
 
     /* Control panel with stats bottom left */
-  #stats-panel {
+#stats-panel {
   position: fixed;
   bottom: 15px;
   right: 15px;
@@ -262,11 +262,14 @@
   display: flex;
   justify-content: space-between;
   padding-bottom: 4px;
+  margin-bottom: 6px;
   border-bottom: 1px solid rgba(255, 255, 255, 0.1);
 }
 
 #stats-panel div:last-child {
+  margin-bottom: 0;
   border-bottom: none;
+  padding-bottom: 0;
 }
 
 #bottom-left-buttons {
