--- a/index.html
+++ b/index.html
@@ -258,6 +258,10 @@
   gap: 6px;
 }
 
+#stats-panel .break {
+  margin-bottom: 12px;
+}
+
 #stats-panel div {
   display: flex;
   justify-content: space-between;
@@ -270,6 +274,10 @@
   margin-bottom: 0;
   border-bottom: none;
   padding-bottom: 0;
+}
+
+#stats-panel .break {
+  margin-bottom: 12px;
 }
 
 #bottom-left-buttons {
@@ -518,7 +526,7 @@
       <div><span>Čas:</span><span id="duration"> 00:00:00</span></div>
       <div><span>Povprečna hitrost:</span><span id="avg-speed"> 0 km/h</span></div>
       <div><span>Država:</span><span id="country"> -</span></div>
-      <div><span>Lokacija:</span><span id="location"> -</span></div>
+      <div class="break"><span>Lokacija:</span><span id="location">-</span></div>
       <div><span>Napredek raziskave:</span><span id="progress"> 0%</span></div>
     </div>
   </div>
