--- a/index.html
+++ b/index.html
@@ -820,3 +820,7 @@ if (locationBtn) {
   mainApp.style.display = 'none';
   loginContainer.style.display = 'flex';
 })();
+  
+</script>
+</body>
+</html>
